# songspot

./: Cargo.toml
songspot/: Cargo.toml
songspot-core/: Cargo.toml
songspot-core/resources/: resources.gresource  resources.gresource.xml
songspot-core/src/: lib.rs
songspot-core/src/audio/: mod.rs
songspot-core/src/ui/: mod.rs
songspot/src/: main.rs
