[package]
name = "songspot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = "0.10.0"
relm4-components = "0.10.0"
gtk = { version = "0.10.1", package = "gtk4" }
adw = { version = "0.8", package = "libadwaita" }
cpal = "0.16.0"
hound = "3.5.1"
gio = "0.21.2"

[build-dependencies]
glib-build-tools = "0.21.0"
